<!--
  ~ Copyright (c) 2016 Daniel Campodonico; Emiliano Gioria; Lucas Moretti.
  ~ This file is part of Lab01c2016.
  ~
  ~ Lab01c2016 is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Lab01c2016 is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Lab01c2016.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Lab01c2016</string>
    <string name="titulo">Calculadora Plazo Fijo</string>
    <string name="correo">Correo Electrónico</string>
    <string name="cuit">CUIT</string>
    <string name="importe">Importe</string>
    <string name="cant_dias_seleccionados">Cantidad de Días</string>
    <string name="cant_dias_inversion">Cantidad de Días de Inversión</string>
    <string name="rendimiento">Rendimiento</string>
    <string name="btn_plazo_fijo">HACER PLAZO FIJO</string>
    <string name="chkbox_renovar">Renovar Automáticamente al Vencimiento</string>
    <string name="msg_exito_plazo_fijo">Plazo fijo realizado. Recibirá $%.3f al vencimiento!</string>
    <string name="msg_error">Ha ocurrido un error!</string>
    <string name="msg_error_correo">El correo ingresado es inválido!</string>
    <string name="msg_error_cuit">El CUIT ingresado es inválido!</string>
    <string name="msg_error_importe">El importe ingresado es inválido!</string>
    <string name="dia">día</string>
    <string name="dias">días</string>
</resources>
